<resources>
    <string name="app_name">Profiler</string>
    <string name="logo_of_the_app">logo of the app</string>
    <string name="profiler">Profiler</string>
    <string name="profiles_list_screen">Profiles List Screen</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dob">DOB</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="full_name">Full Name *</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="phone_required">Phone *</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="address_optional">Address (Optional)</string>
    <string name="update_profile">Update Profile</string>
    <string name="custom_info">Custom Info</string>
    <string name="value">Value</string>
    <string name="key">Key</string>
</resources>